--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.7.7",
+    "lodash": "^4.17.21"
   }
 }
