--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.7.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uniqid": "^5.4.0"
   }
 }
